--- a/style.css
+++ b/style.css
@@ -7,3 +7,27 @@ a:visited {
 a:hover {
     TEXT-DECORATION: underline; color: green;
 }
+
+.top {
+    width: 100%;
+    background: blue;
+}
+
+.top-left {
+    //width: 15%;
+    //height: 30px;
+    //background: red;
+    float: left;
+}
+
+.top-right {
+    //width: 50%; 
+    //height: 30px;
+    //background: green;
+    float: left;
+}
+
+.center {
+    width: 100%;
+    float: left;
+}
