--- a/style.css
+++ b/style.css
@@ -9,14 +9,28 @@ a:hover {
 }
 
 .top-left {
+    width: 20%;
+    height: 30px;
     float: left;
 }
 
 .top-right {
+    width: 80%;
+    height: 30px;
     float: left;
 }
 
 .center {
     width: 100%;
+    float: left;
+}
+
+.center-left {
+    width: 50%;
+    float: left;
+}
+
+.center-right {
+    width: 50%;
     float: left;
 }
