--- a/style.css
+++ b/style.css
@@ -32,7 +32,13 @@ a:hover {
 }
 
 .center-middle {
-    width: 20%;
+    width: 18%;
+    float: left;
+    border:1px solid #000;
+}
+
+.center-separator {
+    width: 2%;
     float: left;
     border:1px solid #000;
 }
