Set the width of vocabulary list to 100%.

--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ a:hover {
 }
 
 .center-left {
-    width: 35%;
+    //width: 35%;
+    width: 100%;
     float: left;
     border:1px solid #000;
 }
